--- a/Day2/Day2|DataPreprocessing-1.ipynb
+++ b/Day2/Day2|DataPreprocessing-1.ipynb
@@ -51,7 +51,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -139,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -270,11 +272,6 @@
     "# $ pip3 install xlrd\n",
     "\n",
     "\n",
-    "print (data.describe())\n",
-    "print ('-----------------------')\n",
-    "print (data.size)\n",
-    "print (data.shape)\n",
-    "print ('-----------------------')\n",
     "X = data.iloc[:, :-1].values\n",
     "Y = data.iloc[:,  -1].values\n",
     "\n",
